--- a/.github/workflows/selectOnRDS.yaml
+++ b/.github/workflows/selectOnRDS.yaml
@@ -28,4 +28,4 @@ jobs:
           DB_USER: postgres
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           DB_NAME: postgres
-        run: echo "show DATABASES;" | PGPASSWORD="$DB_PASSWORD" psql -h $DB_HOST -p $DB_PORT -U $DB_USER -d $DB_NAME -w
+        run: echo "CREATE TABLE nest;" | PGPASSWORD="$DB_PASSWORD" psql -h $DB_HOST -p $DB_PORT -U $DB_USER -d $DB_NAME -w
